# src/schemas/query-params.schema.ts
@@ -1,0 +1,41 @@
+import { Type } from 'class-transformer';
+import { IsInt, IsOptional, IsString, Max, Min } from 'class-validator';
+
+export class BaseQueryParamsDto {
+  @IsOptional()
+  @IsString()
+  search?: string;
+
+  @IsOptional()
+  @IsString()
+  status?: string;
+
+  @IsOptional()
+  @Type(() => Number)
+  @IsInt()
+  @Min(1)
+  page?: number = 1;
+
+  @IsOptional()
+  @Type(() => Number)
+  @IsInt()
+  @Min(1)
+  @Max(100)
+  limit?: number = 10;
+
+  @IsOptional()
+  @IsString()
+  sortBy?: string;
+
+  @IsOptional()
+  @IsString()
+  sortOrder?: 'ASC' | 'DESC' | 'asc' | 'desc';
+}
+
+export class FaqQueryParamsDto extends BaseQueryParamsDto {
+  @IsOptional()
+  @IsString()
+  category?: string;
+}
+
+export class TeamQueryParamsDto extends BaseQueryParamsDto {}
